메세지 국제화 추가

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,10 @@
 page.calculate=상품 시세 계산
-page.item=?? ??
-page.addItem=?? ??
-page.updateItem=?? ??
 
-label.item.id=?? ID
-label.item.itemName=???
-label.item.price=??
+label.wage=공임
+label.margin=마진
 
-button.save=??
-button.cancel=??
+label.calculate=계산하기
+
+button.calculate=계산하기
+button.reset=초기화
+
