계산기 로직 - 입력 제한 완성. - 입력 끝나고 focusOut시에 형식 변형 - 그외 반응형UI,message 수정

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ label.wage=공임
 label.margin=마진
 
 label.calculate=계산하기
+label.goodSearch=상품조회
+label.goodCalculate=상품 가격 계산
 
 button.calculate=계산하기
 button.reset=초기화
