--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,12 +1,13 @@
-page.calculate=상품 시세 계산
+page.calculate=\uC0C1\uD488 \uC2DC\uC138 \uACC4\uC0B0
 
-label.wage=공임
-label.margin=마진
+label.wage=\uACF5\uC784
+label.margin=\uB9C8\uC9C4
 
-label.calculate=계산하기
-label.goodSearch=상품조회
-label.goodCalculate=상품 가격 계산
+label.calculate=\uACC4\uC0B0\uD558\uAE30
+label.itemSave=\uC0C1\uD488\uB4F1\uB85D
+label.itemSearch=\uC0C1\uD488\uC870\uD68C
+label.itemCalculate=\uC0C1\uD488 \uAC00\uACA9 \uACC4\uC0B0
 
-button.calculate=계산하기
-button.reset=초기화
+button.calculate=\uACC4\uC0B0\uD558\uAE30
+button.reset=\uCD08\uAE30\uD654
 
