--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ label.calculate=\uACC4\uC0B0\uD558\uAE30
 label.itemSave=\uC0C1\uD488\uB4F1\uB85D
 label.itemSearch=\uC0C1\uD488\uC870\uD68C
 label.itemCalculate=\uC0C1\uD488 \uAC00\uACA9 \uACC4\uC0B0
+label.goldMarketCondition=\uAE08\uC2DC\uC138
 
 button.calculate=\uACC4\uC0B0\uD558\uAE30
 button.reset=\uCD08\uAE30\uD654
